# bevy_event_entities

./: Cargo.toml  README.md
benches/: event_listener.rs
bevy_event_entities_derive/: Cargo.toml
bevy_event_entities_derive/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/event_listener/: Cargo.toml
crates/event_listener/src/: lib.rs
examples/: damage.rs  listener.rs  minimal.rs
src/: capture_event.rs  damage.rs  event_listener.rs  lib.rs
