[package]
name = "bevy_events_as_entities"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_reflect = { git = "https://github.com/bevyengine/bevy.git" }
bevy_app = { git = "https://github.com/bevyengine/bevy.git" }
bevy_utils = { git = "https://github.com/bevyengine/bevy.git" }
bevy_log = { git = "https://github.com/bevyengine/bevy.git" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git" }
bevy_hierarchy = { git = "https://github.com/bevyengine/bevy.git" }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git" }
rand = "0.8.5"
